--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\19163\AppData\Local\Temp\testng-eclipse-359217672\testng-customsuite.xml</span>
+                    <span>C:\Users\19163\AppData\Local\Temp\testng-eclipse--1924716687\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="uiTestCases.EndToEndTest_motorcycle" class="method navigator-link" hash-for-method="getTitle">getTitle</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="uiTestCases.ErrorTest_motorcycle" class="method navigator-link" hash-for-method="errorMessage_CylinderCapacity">errorMessage_CylinderCapacity</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">uiTestCases.EndToEndTest_motorcycle</span>
+              <span class="class-name">uiTestCases.ErrorTest_motorcycle</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getTitle">
-                  </a> <!-- getTitle -->
-                  <span class="method-name">getTitle</span>
+                  <a name="errorMessage_CylinderCapacity">
+                  </a> <!-- errorMessage_CylinderCapacity -->
+                  <span class="method-name">errorMessage_CylinderCapacity</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\19163\AppData\Local\Temp\testng-eclipse-359217672\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\19163\AppData\Local\Temp\testng-eclipse--1924716687\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;uiTestCases.EndToEndTest_motorcycle&quot;&gt;
+      &lt;class name=&quot;uiTestCases.ErrorTest_motorcycle&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;getTitle&quot;/&gt;
+          &lt;include name=&quot;errorMessage_CylinderCapacity&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- uiTestCases.EndToEndTest_motorcycle --&gt;
+      &lt;/class&gt; &lt;!-- uiTestCases.ErrorTest_motorcycle --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getTitle')
-data.setCell(0, 2, 'uiTestCases.EndToEndTest_motorcycle')
-data.setCell(0, 3, 39296);
+data.setCell(0, 1, 'errorMessage_CylinderCapacity')
+data.setCell(0, 2, 'uiTestCases.ErrorTest_motorcycle')
+data.setCell(0, 3, 1932);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,11 +225,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">uiTestCases.EndToEndTest_motorcycle</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">getTitle</span>
+              <div class="chronological-class-name">uiTestCases.ErrorTest_motorcycle</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">errorMessage_CylinderCapacity</span>
+                <span class="method-start">37724 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">39662 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
