--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2f4ec">  <td>20/11/22 01:30:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorTest_motorcycle.errorMessage_CylinderCapacity()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@6f27a732]">errorMessage_CylinderCapacity</td> 
-  <td>main@245765246</td>   <td></td> </tr>
-<tr bgcolor="cec361">  <td>20/11/22 01:29:35</td>   <td>-37722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@6f27a732]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@245765246</td>   <td></td> </tr>
-<tr bgcolor="cec361">  <td>20/11/22 01:30:15</td>   <td>1938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@6f27a732]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@245765246</td>   <td></td> </tr>
+<tr bgcolor="fea1ea">  <td>20/11/22 21:23:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@37858383]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1936722816</td>   <td></td> </tr>
+<tr bgcolor="fea1ea">  <td>20/11/22 21:23:59</td>   <td>13167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@37858383]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1936722816</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>20/11/22 21:23:57</td>   <td>11460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorTest_motorcycle.verifyModelDropdownOptions()[pri:0, instance:uiTestCases.ErrorTest_motorcycle@37858383]">verifyModelDropdownOptions</td> 
+  <td>main@1936722816</td>   <td></td> </tr>
 </table>
