--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>uiTestCases.ErrorTest_motorcycle.errorMessage_CylinderCapacity</td></tr>
+<tr><td>uiTestCases.ErrorTest_motorcycle.errorMessage_CylinderCapacity1</td></tr>
 </table>
