--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>uiTestCases.ErrorTest_motorcycle</td>
+<td>uiTestCases.EndToEndTest_motorcycle</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>errorMessage_CylinderCapacity1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>errorMessage_CylinderCapacity</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyModelDropdownOptions</td>
+<td>insuranseCalculate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
